# vsar

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  FINDINGS_VSA_FIX.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  PROGRESS.md  README.md  REASONING_IMPLEMENTATION_PLAN.md  RELEASE.md  SHIFT_ENCODING_EXPLAINED.md  TEST_STATUS.md  VSAR_IDE_AND_EXAMPLES_UPDATE.md  mkdocs.yml  pyproject.toml  test_correlation.py  test_cosine_check.py  test_dimension_comparison.py  test_e2e_complete.py  test_fractional_power.py  test_interference_cancellation.py  test_magnitudes.py  test_map_backend.py  test_no_predicate_bind.py  test_normalize.py  test_permute.py  test_permute_shift.py  test_persistence_fix.py  test_query_correlation.py  test_resonator_query.py  test_sanity_checks.py  test_shift_integration.py  test_shift_solution.py  test_shift_vs_unbind.py  test_simple.py  test_single_fact.py  test_unbind_1_3_0.py  test_vsax_query.py  todo.md
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml
docs/: USER_MANUAL.md  architecture.md  capabilities.md  changelog.md  cli-reference.md  encoding-extensibility-design.md  encoding-performance-analysis.md  examples.md  getting-started.md  index.md  language-reference.md  reasoning-algorithms.md  syntax-cheatsheet.md  user_manual.tex
docs/api/: cli.md  encoding.md  index.md  kb.md  kernel.md  language.md  retrieval.md  semantics.md  symbols.md  trace.md
docs/guides/: basic-usage.md  file-formats.md  first-program.md  kb-management.md  negation-guide.md  performance.md  python-api.md  quick-start.md  rules-and-chaining.md
docs/tutorials/: advanced-patterns.md  basic-queries.md  knowledge-graphs.md  rules-and-reasoning.md  transitive-closure.md
examples/: 00_getting_started.vsar  01_basic_rules.vsar  02_family_tree.vsar  03_transitive_closure.vsar  04_organizational_hierarchy.vsar  05_knowledge_graph.vsar  06_academic_network.vsar  07_negation.vsar  08_multi_variable_queries.vsar  09_backward_chaining.vsar  10_advanced_reasoning.vsar  11_recommendation_system.vsar  README.md
experiments/: 01_encoding_comparison.py  02_scalability.py  04_multihop_reasoning.py  benchmark_multi_variable.py  create_figures.py
experiments/datasets/: academic_200.jsonl  family_tree_100.jsonl  (+1 more)
paper/: KEY_INSIGHTS.md  Makefile  README.md  ROADMAP.md  build.bat  build.sh  references.bib  vsar-encoding-backup.tex  vsar-encoding.aux  vsar-encoding.bbl  vsar-encoding.blg  vsar-encoding.out  vsar-encoding.tex
scripts/: bump_version.sh  run_tests.sh
spec/: vsax_reasoner_vsar_detailed_specification.md
tests/: conftest.py
(+111 files in other folders)
